@@ -8,6 +8,7 @@
 #ifndef TEST_SRC_ROFL_COMMON_OPENFLOW_MESSAGES_COFMSGAGGRSTATS_TEST_HPP_
 #define TEST_SRC_ROFL_COMMON_OPENFLOW_MESSAGES_COFMSGAGGRSTATS_TEST_HPP_
 
+#include <atomic>
 #include <cppunit/TestFixture.h>
 #include <cppunit/extensions/HelperMacros.h>
 
@@ -40,9 +41,9 @@ private:
 	uint32_t            xid;
 
 	unsigned int        num_of_conns;
-	unsigned int        num_of_accepts;
+	std::atomic_uint    num_of_accepts;
 	unsigned int        num_of_dpt_established;
-	unsigned int        num_of_ctl_established;
+	std::atomic_uint    num_of_ctl_established;
 
 	bool                trace;
 	rofl::crandom       rand;
